--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<tbody>
 			<tr>
 				<td width="323">
-					<p align="center"><font face="Arial"><img border="0" src="figs/me.jpg" height="224"></font></p>
+					<p align="center"><font face="Arial"><img border="0" src="figs/hpg_zjh.jpg" height="224"></font></p>
 				</td>
 				<td >
 					<p ><font face="Arial" style="font-size: 26pt;" >&nbsp;Jiahe Zhao<span lang="zh-cn"></span></font></p>
@@ -51,7 +51,7 @@
 					<p style="margin-top: 3mm;margin-bottom: 0.5mm"><font face="Arial" style="font-size: 12pt;">&nbsp; <b>Email</b>: zhaojiahe1 at gmail dot com</font></p>
 					&nbsp;
 					<a href="https://scholar.google.com/citations?user=dG_NwQYAAAAJ&hl=zh-CN" style="font-size: 12pt;"><b>Google Scholar</b></a> &bull;
-					<a href="https://github.com/ZJHTerry18" style="font-size: 12pt;"><b>GitHub</b></a>&bull;
+					<a href="https://github.com/ZJHTerry18" style="font-size: 12pt;"><b>GitHub</b></a>;
 				</td>
 
 			</tr>
@@ -78,6 +78,7 @@
 		</tbody>
 </table>
 
+<!--
 <p style="margin-left: 60px;margin-top: -30px"><b><font size="5"><br>
 		News</font></b></p>
 		<font style="font-size: 12pt; line-height: 1.25;">
@@ -98,19 +99,13 @@
 				<!-- <li>[October, 2022] Our GDRNPP on object pose estimation wins the majority of <b>best awards in BOP Challenge 2022, ECCV R6D Workshop</b>.</li> -->
 			</ul>
 		</font>
+-->
 
 <table style="width:80%;margin-left: 55px;border-spacing: 0;">
 	<tbody>
 	<tr>
 		<p style="margin-left: 60px;margin-bottom: 10px"><b><font face="Arial" size="5">
-		Selected Publications and Contests</font></b></p>
-	</tr>
-
-	<tr>
-		<td colspan="2">
-			<b><font face="Arial" size="4" style="color: rgb(107, 13, 60)">
-				Theme 1: Reconstructing and Understanding Human-Scene Interaction </font></b><br>
-			</td>
+		Selected Publications </font></b></p>
 	</tr>
 
 	<tr align="left">
@@ -134,99 +129,6 @@
 					<b><a href="https://github.com/ZhangCYG/MOHO">Code</a></b> |
 					<a href="figs\moho_poster.pdf"><b>Poster</b></a>
 			</p></td></tr>
-
-	<tr align="left">
-		<td width="20%" style="vertical-align: middle;"><p><img src="./figs/ddfho.PNG" height="140" width="240" alt="ddfho"></p></td>
-		<td width="80%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
-			<strong >DDF-HO: Hand-Held Object Reconstruction via Conditional Directed Distance Field</strong><br>
-					<span style="text-decoration: underline">Chenyangguang Zhang*</span>, Yan Di*, Ruida Zhang*, Guangyao Zhai, Fabian Manhardt, Federico Tombari, Xiangyang Ji<br>
-					<em>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2023. <br> 		
-					<a href="https://proceedings.neurips.cc/paper_files/paper/2023/file/b2876deb92cbd098219a10da25671577-Paper-Conference.pdf"><b>Paper</b></a> |
-					<b><a href="https://github.com/ZhangCYG/DDFHO">Code</a></b> |
-					<a href="figs\ddfho_poster.pdf"><b>Poster</b></a>
-			</p></td></tr>
-
-	<tr>
-		<td colspan="2">
-			<b><font face="Arial" size="4" style="color: rgb(107, 13, 60)">
-				Theme 2: Object-Centric Indoor Scene Reconstruction</font></b><br>
-			</td>
-	</tr>
-
-	<tr align="left">
-		<td width="20%" style="vertical-align: middle;"><p><img src="./figs/shapemaker.PNG" height="140" width="240" alt="shapemaker"></p></td>
-		<td width="80%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
-			<strong >ShapeMatcher: Self-Supervised Joint Shape Canonicalization, Segmentation, Retrieval and Deformation</strong><br>
-					Yan Di*, <span style="text-decoration: underline">Chenyangguang Zhang</span>*, Chaowei Wang*, Ruida Zhang, Guangyao Zhai, Yanyan Li, Bowen Fu, Xiangyang Ji, Shan Gao<br>
-					<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024. <br> 		
-					<b><a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Di_ShapeMatcher_Self-Supervised_Joint_Shape_Canonicalization_Segmentation_Retrieval_and_Deformation_CVPR_2024_paper.pdf">Paper</a></b> |
-					<b><a href="https://github.com/Det1999/ShapeMaker">Code</a></b>
-			</p></td></tr>
-
-	<tr align="left">
-		<td width="20%" style="vertical-align: middle;"><p><img src="./figs/kpred.PNG" height="140" width="240" alt="kpred"></p></td>
-		<td width="80%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
-			<strong >KP-RED: Exploiting Semantic Keypoints for Joint 3D Shape Retrieval and Deformation</strong><br>
-					Ruida Zhang*, <span style="text-decoration: underline">Chenyangguang Zhang</span>*, Yan Di, Fabian Manhardt, Xingyu Liu, Federico Tombari, Xiangyang Ji<br>
-					<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024. <br> 		
-					<b><a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Zhang_KP-RED_Exploiting_Semantic_Keypoints_for_Joint_3D_Shape_Retrieval_and_CVPR_2024_paper.pdf">Paper</a></b> |
-					<b><a href="https://github.com/lolrudy/KP-RED">Code</a></b>
-			</p></td></tr>
-
-	<tr align="left">
-		<td width="20%" style="vertical-align: middle;"><p><img src="./figs/ured.PNG" height="140" width="240" alt="ured"></p></td>
-		<td width="80%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
-			<strong >U-RED: Unsupervised 3D Shape Retrieval and Deformation for Partial Point Clouds</strong><br>
-						Yan Di*, <span style="text-decoration: underline">Chenyangguang Zhang</span>*, Ruida Zhang*, Fabian Manhardt, Yongzhi Su, Jason Rambach, Didier Stricker, Xiangyang Ji, Federico Tombari<br>
-						<em>International Conference on Computer Vision (<b>ICCV</b>), 2023. <br> 
-						<a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Di_U-RED_Unsupervised_3D_Shape_Retrieval_and_Deformation_for_Partial_Point_ICCV_2023_paper.pdf"><b>Paper</b></a> |
-						<b><a href="https://github.com/ZhangCYG/U-RED">Code</a></b>
-			</p></td></tr>
-	
-	<tr>
-		<td colspan="2">
-			<b><font face="Arial" size="4" style="color: rgb(107, 13, 60)">
-				Theme 3: MVS and Pose Estimation </font></b><br>
-			</td>
-	</tr>
-
-	<tr align="left">
-		<td width="20%" style="vertical-align: middle;"><p><img src="./figs/sst.PNG" height="140" width="240" alt="sst"></p></td>
-		<td width="80%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
-			<strong>SST: Real-time End-to-end Monocular 3D Reconstruction via Sparse Spatial-Temporal Guidance</strong><br>
-						<span style="text-decoration: underline">Chenyangguang Zhang*</span>, Zhiqiang Lou*, Yan Di, Federico Tombari, Xiangyang Ji<br>
-						<em>IEEE International Conference on Multimedia and Expo (<b>ICME</b>)</em>, 2023 (<b>oral</b>). <br> 
-					<a href="https://ieeexplore.ieee.org/abstract/document/10219928"><b>Paper</b></a>|
-					<a href="figs\SST_ICME23_PPT.pdf"><b>Oral Presentation Slides</b></a>
-			</p></td>
-	</tr>
-			
-	<tr align="left">
-		<td width="20%" style="vertical-align: middle;"><p><img src="./figs/gdrnpp.png" height="140" width="240" alt="gdrnpp"></p></td>
-		<td width="80%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
-			<strong>GDRNPP: A Geometry-guided and Fully Learning-based Object Pose Estimator</strong><br>
-			            Xingyu Liu, Ruida Zhang, <span style="text-decoration: underline">Chenyangguang Zhang</span>, Gu Wang, Jiwen Tang, Zhigang Li, Xiangyang Ji<br>
-						<em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>)</em>, 2025. <br>
-						<b>Winner of BOP Challenge 2022 @ ECCV R6D Workshop.</b><br>
-					<a href="https://ieeexplore.ieee.org/abstract/document/10937121"><b>Paper</b></a>|
-					<a href="https://cmp.felk.cvut.cz/sixd/workshop_2022/slides/bop_challenge_2022_results.pdf"><b>Slides</b></a> |
-					<b><a href="https://github.com/shanice-l/gdrnpp_bop2022">Code</a></b>
-			</p></td>
-	</tr>
-
-	<tr align="left">
-		<td width="20%" style="vertical-align: middle;"><p><img src="./figs/GPose2023.PNG" height="140" width="240" alt="gpose"></p></td>
-		<td width="80%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
-			<strong>GPose2023: A Modularized Learning-based Object Pose Estimator</strong><br>
-			            Ruida Zhang, Ziqin Huang, Gu Wang, Xingyu Liu, <span style="text-decoration: underline">Chenyangguang Zhang</span>, Xiangyang Ji<br>
-						<em>International Conference on Computer Vision Workshop (<b>ICCVW</b>)</em>, 2023. <br>
-						<b>Winner of BOP Challenge 2023 @ ICCV R6D Workshop.</b><br>
-					<a href="figs\GPose_ICCV23.pdf"><b>Oral Presentation Slides</b></a>
-			</p></td>
-	</tr>
-
-	</tbody>
-</table>
 
 <p style="margin-left: 60px;margin-top: -30px"><b><font size="5"><br>
 	Work Experiences and Interships</font></b></p>
