--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<p style="margin-top: 3mm;margin-bottom: 0.5mm"><font face="Arial" style="font-size: 12pt;">&nbsp; <b>Email</b>: zhaojiahe1 at gmail dot com</font></p>
 					&nbsp;
 					<a href="https://scholar.google.com/citations?user=dG_NwQYAAAAJ&hl=zh-CN" style="font-size: 12pt;"><b>Google Scholar</b></a> &bull;
-					<a href="https://github.com/ZJHTerry18" style="font-size: 12pt;"><b>GitHub</b></a>;
+					<a href="https://github.com/ZJHTerry18" style="font-size: 12pt;"><b>GitHub</b></a>
 				</td>
 
 			</tr>
@@ -64,12 +64,12 @@
 				<td style="border-style: none; border-width: medium;">
 					<p style="margin-top: 3px; margin-bottom: 3px;"><font face="Arial" style="font-size: 12pt;">
 						I am a final year Master student at VIPL Lab, Institute of Computing Technology, Chinese Academy of Sciences, supervised by Prof. <a href="https://vipl.ict.ac.cn/people/hchang/">Hong Chang</a>.
-						I achieved my bachelor's degree from Department of Automation, Tsinghua University.
+						I achieved my bachelor's degree from the Department of Automation, Tsinghua University.
 						I'm an incoming PhD student at <a href="https://uob-mavi.github.io/people/">Mavi Lab</a>, University of Bristol, supervised by Prof. <a href="https://dimadamen.github.io/">Dima Damen</a>.
 						I have spent wonderful times as a visiting student at the University of Hong Kong and Shanghai AI Laboratory, supervised by Prof. <a href="https://i.cs.hku.hk/~hszhao/">Hengshuang Zhao</a> and Dr. <a href="https://shepnerd.github.io/">Yi Wang</a>.
 						<br>
 						<br>
-						My research interests lie in <b style="color: darkblue">multi-modal learning</b>, <b style="color: darkblue">human-centric learning</b> and <b style="color: darkblue">video understanding</b>. I will be particularly focused on <b style="color: darkblue">egocentric video understanding</b> in my PhD career.
+						My research interests lie in <b style="color: darkblue">multi-modal learning</b>, <b style="color: darkblue">human-centric learning</b> and <b style="color: darkblue">video understanding</b>. Now I am particularly focused on <b style="color: darkblue">egocentric video understanding</b>. Feel free to drop me an email if you want to communicate.
 						<br>
 						<br>
 					</font></p>
@@ -77,29 +77,6 @@
 			</td>
 		</tbody>
 </table>
-
-<!--
-<p style="margin-left: 60px;margin-top: -30px"><b><font size="5"><br>
-		News</font></b></p>
-		<font style="font-size: 12pt; line-height: 1.25;">
-			<ul style="margin-left: 60px;margin-top: -10px">
-				<!-- <li>[Mar, 2025] Glad to start an internship at <a href="https://dexmal.com/">Dexmal</a> doing something interesting about whole body control.</li> -->
-				<li>[Mar, 2025] My co-authored work <a href="https://ieeexplore.ieee.org/abstract/document/10937121">GDRNPP</a> is accepted by <b>TPAMI</b>. It has been SOTA on BOP challenge since 2022.</li>
-				<li>[Feb, 2025] My first-authored paper <a href="https://arxiv.org/pdf/2503.19199">OpenFunGraph</a> is accepted by <b>CVPR 2025 (Highlight)</b>. It proposes a functional scene graph representation to model indoor functionality and interaction.</li>
-				<li>[Feb, 2025] Two co-authored papers are accepted by <b>CVPR 2025</b>. <a href="https://arxiv.org/pdf/2411.16106">UNOPose</a> for unseen object pose estimation with an RGB-D reference. <a href="https://arxiv.org/pdf/2503.15110">GIVEPose</a> for RGB-based category-level object pose estimation.</li>
-				<li>[Oct, 2024] Two co-authored papers are presented at <b>ECCV 2024</b>. <a href="https://www.ecva.net/papers/eccv_2024/papers_ECCV/papers/04261.pdf">D-SCo</a> for diffusion-based hand-held object reconstruction.  <a href="https://www.ecva.net/papers/eccv_2024/papers_ECCV/papers/03696.pdf">LaPose</a> for RGB-based category-level object pose estimation. </li>
-				<li>[May, 2024] My co-first-authored paper <a href="https://ieeexplore.ieee.org/abstract/document/10611208">RaSim</a> is presented in <b>ICRA 2024</b>. It involves a useful pipeline for simulating real-world depth scan and completing defected depth maps.</li>
-				<li>[Feb, 2024] Three my (co-)first-authored papers are accepted by <b>CVPR 2024</b>, including <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Zhang_MOHO_Learning_Single-view_Hand-held_Object_Reconstruction_with_Multi-view_Occlusion-Aware_Supervision_CVPR_2024_paper.pdf">MOHO</a> for single-view hand-held object reconstruction without 3D supervision; <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Zhang_KP-RED_Exploiting_Semantic_Keypoints_for_Joint_3D_Shape_Retrieval_and_CVPR_2024_paper.pdf">KP-RED</a> for shape analysis without part annotations; <a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Di_ShapeMatcher_Self-Supervised_Joint_Shape_Canonicalization_Segmentation_Retrieval_and_Deformation_CVPR_2024_paper.pdf">ShapeMatcher</a> for indoor shape analysis from arbitrary poses.</li>
-				<li>[Feb, 2024] I'm approved to enroll as an project mobility student to <b>CVG, ETH Zurich</b>. Great thanks for Prof. Marc Pollefeys for giving this opportunity!</li>
-				<li>[Oct, 2023] Our work GPose2023 <b>wins BOP Challenge 2023</b>, ICCV R6D Workshop. It's honored for me to give an oral presentation in <b>ICCV 2023</b>.</li>
-				<li>[Sept, 2023] My first-authored paper <a href="https://proceedings.neurips.cc/paper_files/paper/2023/file/b2876deb92cbd098219a10da25671577-Paper-Conference.pdf">DDF-HO</a> on single-view hand-held object reconstruction is accepted by <b>NeurIPS 2023</b>.</li>
-				<li>[July, 2023] My co-first-authored paper <a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Di_U-RED_Unsupervised_3D_Shape_Retrieval_and_Deformation_for_Partial_Point_ICCV_2023_paper.pdf">U-RED</a> on unsupervised shape retrieval and deformation in indoor scenes is accepted by <b>ICCV 2023</b>.</li>
-				<!-- <li>[July, 2023] I have an oral presentation about paper SST in <b>ICME 2023</b>.</li> -->
-				<!-- <li>[March, 2023] My first-authored paper <a href="https://ieeexplore.ieee.org/abstract/document/10219928">SST</a> on end-to-end real-time indoor scene reconstruction is accepted by <b>ICME 2023 (oral)</b>.</li> -->
-				<!-- <li>[October, 2022] Our GDRNPP on object pose estimation wins the majority of <b>best awards in BOP Challenge 2022, ECCV R6D Workshop</b>.</li> -->
-			</ul>
-		</font>
--->
 
 <table style="width:80%;margin-left: 55px;border-spacing: 0;">
 	<tbody>
@@ -109,69 +86,54 @@
 	</tr>
 
 	<tr align="left">
-		<td width="20%" style="vertical-align: middle;"><p><img src="./figs/openfungraph.jpg" height="140" width="240" alt="MOHO"></p></td>
-		<td width="80%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
-			<strong >Open-Vocabulary Functional 3D Scene Graphs for Real-World Indoor Spaces</strong><br>
-					<span style="text-decoration: underline">Chenyangguang Zhang</span>, Alexandros Delitzas, Fangjinhua Wang, Ruida Zhang, Xiangyang Ji, Marc Pollefeys, Francis Engelmann<br>
-					<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025. (<b>Highlight</b>) <br> 		
-					<b><a href="https://arxiv.org/pdf/2503.19199">Paper</a></b>
-					<!-- <b><a href="https://github.com/ZhangCYG/MOHO">Code</a></b> | -->
-					<!-- <a href="figs\moho_poster.pdf"><b>Poster</b></a> -->
+		<td width="30%" style="vertical-align: middle;"><p><img src="./figs/DisCo_ICCV25.jpg" height="140" width="240" alt="DisCo"></p></td>
+		<td width="70%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
+			<strong >DisCo: Towards Distinct and Coherent Visual Encapsulation in Video MLLMs</strong><br>
+					<span style="text-decoration: underline">Jiahe Zhao</span>, Rongkun Zheng, Yi Wang, Helin Wang, Hengshuang Zhao
+					<em>International Conference on Computer Vision (<b>ICCV</b>), 2025. <br> 		
+					<b><a href="https://arxiv.org/abs/2507.10302">Paper</a></b>
+					<b><a href="https://github.com/ZJHTerry18/DisCo">Code</a></b> |
 			</p></td></tr>
 
 	<tr align="left">
-		<td width="20%" style="vertical-align: middle;"><p><img src="./figs/MOHO.PNG" height="140" width="240" alt="MOHO"></p></td>
-		<td width="80%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
-			<strong >MOHO: Learning Single-view Hand-held Object Reconstruction with Multi-view Occlusion-Aware Supervision</strong><br>
-					<span style="text-decoration: underline">Chenyangguang Zhang*</span>, Guanlong Jiao*, Yan Di, Gu Wang, Ziqin Huang, Ruida Zhang, Fabian Manhardt, Bowen Fu, Federico Tombari, Xiangyang Ji<br>
-					<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024. <br> 		
-					<b><a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Zhang_MOHO_Learning_Single-view_Hand-held_Object_Reconstruction_with_Multi-view_Occlusion-Aware_Supervision_CVPR_2024_paper.pdf">Paper</a></b> |
-					<b><a href="https://github.com/ZhangCYG/MOHO">Code</a></b> |
-					<a href="figs\moho_poster.pdf"><b>Poster</b></a>
+		<td width="30%" style="vertical-align: middle;"><p><img src="./figs/HISGPT_ICCV25.jpg" height="140" width="240" alt="HIS-GPT"></p></td>
+		<td width="70%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
+			<strong >HIS-GPT: Towards 3D Human-In-Scene Multimodal Understanding</strong><br>
+					<span style="text-decoration: underline">Jiahe Zhao</span>, Ruibing Hou, Zejie Tian, Hong Chang, Shiguang Shan<br>
+					<em>International Conference on Computer Vision (<b>ICCV</b>), 2025. <br> 		
+					<b><a href="https://ieeexplore.ieee.org/document/10908873">Paper</a></b> |
+					<b><a href="https://github.com/ZJHTerry18/HumanInScene">Code</a></b>
+			</p></td></tr>
+		
+	<tr align="left">
+		<td width="30%" style="vertical-align: middle;"><p><img src="./figs/FAIM_TMM25.jpg" height="140" width="240" alt="FAIM"></p></td>
+		<td width="70%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
+			<strong >Clothes-Changing Person Re-Identification with Feasibility-Aware Intermediary Matching</strong><br>
+					<span style="text-decoration: underline">Jiahe Zhao</span>, Ruibing Hou, Hong Chang, Xinqian Gu, Bingpeng Ma, Shiguang Shan, Xilin Chen<br>
+					<em>IEEE Transactions on Multimedia (<b>TMM</b>), 2025. <br> 		
+					<b><a href="https://ieeexplore.ieee.org/document/10908873">Paper</a></b> |
+					<b><a href="https://github.com/ZJHTerry18/FAIM">Code</a></b>
+			</p></td></tr>
+
+	<tr align="left">
+		<td width="30%" style="vertical-align: middle;"><p><img src="./figs/HERM_arxiv24.jpg" height="140" width="240" alt="HERM"></p></td>
+		<td width="70%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
+			<strong >HERM: Benchmarking and Enhancing Multimodal LLMs for Human-Centric Understanding</strong><br>
+					Keliang Li*, Zaifei Yang*, <span style="text-decoration: underline">Jiahe Zhao*</span>, Hongze Shen, Ruibing Hou, Hong Chang, Shiguang Shan, Xilin Chen<br>
+					<em>arxiv, 2024. <br> 		
+					<b><a href="https://arxiv.org/abs/2410.06777">Paper</a></b> |
+					<b><a href="https://github.com/ZJHTerry18/Human-Centric-MLLM">Code</a></b>
 			</p></td></tr>
 
 <p style="margin-left: 60px;margin-top: -30px"><b><font size="5"><br>
-	Work Experiences and Interships</font></b></p>
+	Work Experiences and Internships</font></b></p>
 	<font style="font-size: 12pt; line-height: 1.25;">
 		<ul style="margin-left: 60px;margin-top: -10px">
-			<li><b><a href="https://dexmal.com/">Dexmal</a></b>: Whole body control for quadrupeds, 2025</li>
-			<li><b><a href="https://cvg.ethz.ch/index">CVG</a>, ETH Zurich</b>: Project mobility student for 3D computer vision, supervised by Prof. <a href="https://people.inf.ethz.ch/pomarc/">Marc Pollefeys</a>, and daily advised by Dr. <a href="https://francisengelmann.github.io/">Francis Engelmann</a> and <a href="https://fangjinhuawang.github.io/">Fangjinhua Wang</a>, 2024</li>
-			<li><b>Definite Capital</b>: Machine learning for quantitative trades, where I worked with Dr. <a href="https://scholar.google.com.sg/citations?hl=zh-CN&user=1xn5GHgAAAAJ">Rui Xu</a> and Dr. <a href="https://scholar.google.com.sg/citations?hl=zh-CN&user=7P30Es0AAAAJ">Yu Xiong</a>, 2023</li>
-			<li><b>TikTok</b>: 3D scene reconstruction for VR, where I worked with Dr. <a href="https://pengwangucla.github.io/peng-wang.github.io/">Peng Wang</a>, 2022</li>
-			<li><b>LinkedSee</b>: Machine learning for AIOPS, where I worked with AP Dr. <a href="https://www.ai.pku.edu.cn/info/1138/2337.htm">Tong Jia</a>, 2022</li>
-			<li><b>Meituan</b>: Real-time 3D mapping for UAV, where I'm supervised by Prof. Dr. <a href="https://udel.edu/~ghuang/">Guoquan Huang</a>, 2021</li>
-			<li><b>Tencent Games</b>: Backend developer for game servers, 2021</li>
+			<li><b><a href="https://i.cs.hku.hk/~hszhao/lab.html">CSAIL</a>, HKU</b>: Summer research intern for computer vision, supervised by Prof. <a href="https://i.cs.hku.hk/~hszhao/">Henshuang Zhao</a>, 2024</li>
+			<li><b><a href="https://www.shlab.org.cn/">Shanghai AI Laboratory</a></b>: Video multi-modal large language models (MLLMs), where I worked with Dr. <a href="https://shepnerd.github.io/">Yi Wang</a>, 2024</li>
+			<li><b>Megvii</b>: Object detection for intelligent industrial and traffic devices, 2023</li>
 		</ul>
 	</font>
-
-<p style="margin-left: 60px;margin-top: -30px"><b><font size="5"><br>
-		Honors and Awards</font></b></p>
-		<font style="font-size: 12pt; line-height: 1.25;">
-			<ul style="margin-left: 60px;margin-top: -10px">
-				<li>Li Yanda Scholarship, 2024</li>
-				<li>Tianma Intelligent Control Scholarship, 2023</li>
-				<li>China Optics Valley Scholarship, 2021</li>
-				<li>Outstanding Student of THU, 2021</li>
-				<li>Tang Lixin Excellent Scholarship, 2020.</li>
-				<li>Good Reading Scholarship, THU, 2019.</li>
-			</ul>
-		</font>
-
-<p style="margin-left: 60px;margin-top: -30px"><b><font size="5"><br>
-		Miscellaneous</font></b></p>
-<p style="margin-left: 60px;margin-right: 60px;margin-top: -10px;font-size: 12pt">
-	I love sports. I enjoy playing soccer&#9917 and badminton&#127992, etc. and serve as a winger of soccer team of DA, THU. I'm a soccer fans of Man. Utd. and José Mourinho.
-	<br>
-	<br>
-	I'm also interested in writing novels and poems. Some of my works are published on Chinese literary magazines. My Wechat official account is named "了妄", where I share some literary works I wrote. 
-	<br>
-	<br>
-	I'm a guitar player admiring Tommy Emmanuel and Kotaro Oshio. Meanwhile, I'm a figure skating fans of Yuzuru Hanyu.
-	<br>
-	<br>
-	Feel free to get in touch!
-
-</p>
 <br>
 <br>
 
