--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
 					<b><a href="https://arxiv.org/abs/2410.06777">Paper</a></b> |
 					<b><a href="https://github.com/ZJHTerry18/Human-Centric-MLLM">Code</a></b>
 			</p></td></tr>
+	</tbody>
+</table>
 
 <p style="margin-left: 60px;margin-top: -30px"><b><font size="5"><br>
 	Work Experiences and Internships</font></b></p>
