--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 		<td width="30%" style="vertical-align: middle;"><p><img src="./figs/DisCo_ICCV25.jpg" height="140" width="240" alt="DisCo"></p></td>
 		<td width="70%" style="vertical-align: middle;"><p style="font-size: 12pt;line-height: 1.2;width: 16cm; margin-left: 10px;">
 			<strong >DisCo: Towards Distinct and Coherent Visual Encapsulation in Video MLLMs</strong><br>
-					<span style="text-decoration: underline">Jiahe Zhao</span>, Rongkun Zheng, Yi Wang, Helin Wang, Hengshuang Zhao
+					<span style="text-decoration: underline">Jiahe Zhao</span>, Rongkun Zheng, Yi Wang, Helin Wang, Hengshuang Zhao<br>
 					<em>International Conference on Computer Vision (<b>ICCV</b>), 2025. <br> 		
-					<b><a href="https://arxiv.org/abs/2507.10302">Paper</a></b>
-					<b><a href="https://github.com/ZJHTerry18/DisCo">Code</a></b> |
+					<b><a href="https://arxiv.org/abs/2507.10302">Paper</a></b> |
+					<b><a href="https://github.com/ZJHTerry18/DisCo">Code</a></b>
 			</p></td></tr>
 
 	<tr align="left">
